THRIFT-2854 Go Struct writer and reader looses important error information Client: Go Patch: Chi Vinh Le <cvl@chinet.info>

This closes #291

Fixes error reporting in go generator